# llm_bench

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: python-test-workflows.yml  tag-workflows.yml
Garmin LLM Benchmark/: .thumbnail  Garmin AI 評測平台.html  SKILL.md  _adherence.oxlintrc.json  _ds_bundle.js  _ds_manifest.json  readme.md
Garmin LLM Benchmark/components/core/: Badge.d.ts  Badge.jsx  Badge.prompt.md  Button.d.ts  Button.jsx  Button.prompt.md  MetricCard.d.ts  MetricCard.jsx  MetricCard.prompt.md  ModelChip.d.ts  ModelChip.jsx  Progress.d.ts  Progress.jsx  core.card.html
Garmin LLM Benchmark/exports/: _ds_bundle.js  data.js  history.jsx  index.html
Garmin LLM Benchmark/exports/tokens/: animation.css
Garmin LLM Benchmark/guidelines/: animations.card.html  colors-brand.card.html  colors-dark.card.html  colors-model.card.html  colors-score.card.html  colors-semantic.card.html  colors-surface.card.html  radius.card.html  shadows.card.html  spacing.card.html  type-mono.card.html  type-sans.card.html
Garmin LLM Benchmark/handoff/: copilot-instructions.md  update.md
Garmin LLM Benchmark/tokens/: components.css
Garmin LLM Benchmark/ui_kits/benchmark/: index.html
deploy/: .env.linxpa-dl02  docker-compose.devel.yaml  docker-compose.prod.yaml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AnswerRenderer.tsx  BenchmarkModelsCard.tsx  DetailSection.tsx  EnhancedProjectSelectionCard.tsx  ErrorBoundary.tsx  EvaluateGuard.tsx  GlobalTabs.tsx  JsonDiff.tsx  Layout.tsx  LoadingModal.tsx  MetricBar.tsx  ModelConfigPopover.tsx  NeonCheckbox.tsx  ProjectSelectionCard.tsx  PromptBlock.tsx  (+4 more)
handoff/: design-guidelines.md
handoff/reference/: parts.jsx
llm_benchmark/: logging.py  persistence.py  runner.py  samples.py  schema.py  scoring.py  sources.py
llm_benchmark/adapters/: __init__.py  base.py  custom_api.py  flowise.py  llm_vlm.py
llm_benchmark/history/: __init__.py  builder.py  cleanup.py  schema.py  series.py  storage.py
llm_benchmark/metrics/: __init__.py  deepeval_judgement.py  deepeval_model.py  deepeval_ragas.py  llm_judgement.py  performance.py  ragas.py  roi.py
llm_benchmark/service/: app.py  dependencies.py
llm_benchmark/settings/: __init__.py  base.py  facade.py  loader.py  secrets.yaml  settings.yaml
tests/unit/: test_schema.py
(+63 files in other folders)
